# egg

./: Cargo.toml  TODO  example.json  example.yaml  example2.yaml
src/: client.rs  command.rs  error.rs  lib.rs  main.rs  plans.rs  process.rs  run.rs  server.rs  tasks.rs
src/command/: run.rs
src/egg/command/: run.rs
src/egg/server/: handlers.rs  plan.rs  run.rs
src/server/: handlers.rs  plan.rs  run.rs
