[package]
name = "egg"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-streams = { version = "0.18.0", features = ["json"] }
clap = { version = "4.5.16", features = ["derive"] }
futures = "0.3.30"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
